Sessão de ver mais feita

--- a/pages/home.html
+++ b/pages/home.html
@@ -33,13 +33,20 @@
                 <h1 class="principal_minicard_titulo">Titulo do artigo</h1>
                 <img class="principal_minicard_img" src="../img/livro2.jpg" alt="">
             </div>
-
         </div>
 
-        
+        <div class="conteudo">
+            <h1 class="conteudo_titulo">Outros artigos</h1>
+
+            <div id="conteudo_sessao" class="conteudo_sessao">
+
+            </div>
+            <button id="conteudo_vermais" class="conteudo_vermais">Ver mais</button>
+        </div>
 
     </main>
 
+    <script src="../js/adicionarCard.js"></script>
     <script src="../js/pesquisa.js"></script>
 </body>
 </html>
