Adicionando bloco de pesquisa

--- a/pages/home.html
+++ b/pages/home.html
@@ -48,6 +48,10 @@
         </main>
     
         <div id="resultado_pesquisa" class="resultado_pesquisa">
+            <div class="resultado_card">
+                <h1 class="resultado_card_titulo">Titulo</h1>
+                <h2 class="resultado_card_tema">Tema</h2>
+            </div>
         </div>
     </div>
     
