Sistema de pesquisa integrado com API

--- a/pages/home.html
+++ b/pages/home.html
@@ -48,19 +48,8 @@
         </main>
     
         <div id="resultado_pesquisa" class="resultado_pesquisa">
-            <div id="resultado_cards">
-                <div class="resultado_card">
-                    <h1 class="resultado_card_titulo">Titulo</h1>
-                    <h2 class="resultado_card_tema">Tema</h2>
-                </div>
-                <div class="resultado_card">
-                    <h1 class="resultado_card_titulo">Titulo</h1>
-                    <h2 class="resultado_card_tema">Tema</h2>
-                </div>
-                <div class="resultado_card">
-                    <h1 class="resultado_card_titulo">Titulo</h1>
-                    <h2 class="resultado_card_tema">Tema</h2>
-                </div>
+            <div id="resultado_cards" class="resultado_cards">
+
             </div>
             
         </div>
