--- a/pages/home.html
+++ b/pages/home.html
@@ -60,13 +60,13 @@
         <div class="link-rodape">
             <a href="#" id="scroll-top-link">Topo</a>
             <a href="#" target="_blank">
-                <img class="rodape-img" src="../img/face.jpg" alt="Facebook" class="icon-img">
+                <img class="rodape-img" src="../img/face.webp" alt="Facebook" class="icon-img">
             </a>
             <a href="#" target="_blank">
-                <img class="rodape-img" src="../img/insta.jpg" alt="Instagram" class="icon-img">
+                <img class="rodape-img" src="../img/insta.png" alt="Instagram" class="icon-img">
             </a>
             <a href="#" target="_blank">
-                <img class="rodape-img" src="../img/discord.jpg" alt="Discord" class="icon-img">
+                <img class="rodape-img" src="../img/discord.png" alt="Discord" class="icon-img">
             </a>
         </div>
 
