--- a/pages/loginAdm.html
+++ b/pages/loginAdm.html
@@ -14,18 +14,19 @@
     </header>
     <main class="principal">
         <div class="bloco_login">
-            <form method="post" action="">
-                <h1>Login</h1>
-                <p>
+            <form class="login-form" method="post" action="">
+                <h1 class="form-title">Login</h1>
+                <p class="form-field">
                     <label for="nome_adm">Usuario</label>
-                    <input type="text" name="nome_adm" placeholder="Digite o usuario">
+                    <input class="input-field" type="text" name="nome_adm" placeholder="Digite o usuario">
                 </p>
-                <p>
+                <p class="form-field">
                     <label for="nome_adm">Senha</label>
-                    <input type="password" name="senha_adm" placeholder="Digite a senha">
+                    <input class="input-field" type="password" name="senha_adm" placeholder="Digite a senha">
                 </p>
-                <input type="submit" value="Logar">
+                <input class="submit-button" type="submit" value="Logar">
             </form>
+            
         </div>
     </main>
 </body>
