--- a/pages/teste.html
+++ b/pages/teste.html
@@ -20,13 +20,13 @@
                 <form class="principal_formulario" id="form_envio" action="http://localhost:8080/api/upload" method="post" enctype="multipart/form-data">
                     <input type="file" id="file" name="file">
                     
-                    <select name="tema">
+                    <select name="tema" class="tema-select">
                         <option value="economia">Economia</option>
                         <option value="filosofia">Filosofia</option>
                         <option value="geopolitica">Geopolitica</option>
                         <option value="historia">Historia</option>
                     </select>
-                    <input type="submit">
+                    <input type="submit" class="button">
                 </form>
             </div>
             <div>
