--- a/pages/home.html
+++ b/pages/home.html
@@ -69,7 +69,7 @@
                 <img class="rodape-img" src="../img/insta.png" alt="Instagram" class="icon-img">
             </a>
             <a href="#" target="_blank">
-                <img class="rodape-img" src="../img/discord.png" alt="Discord" class="icon-img">
+                <img id="img_discord" class="rodape-img" src="../img/discord-logo-discord-icon-transparent-free-png.webp" alt="Discord" class="icon-img">
             </a>
         </div>
 
