--- a/pages/home.html
+++ b/pages/home.html
@@ -25,8 +25,8 @@
         <main class="principal">              
 
             <div class="principal_card">
-                <h1 class="principal_card_titulo">Titulo do artigo</h1>
-                <img class="principal_card_img" src="../img/história-do-livro.jpg" alt="Imagem ...">
+                <h1 class="principal_card_titulo">Fundamentos da filosofia</h1>
+                <img class="principal_card_img" src="../img/image_2_4.png" alt="Imagem ...">
             </div>
     
             <div class="principal_minicards">
