Novo link denovo

--- a/pages/administracao.html
+++ b/pages/administracao.html
@@ -10,7 +10,7 @@
 <body class="fundo">
     <script src="../js/verificarTokenParaAdm.js"></script>
     <header class="cabecalho">
-        <a href="home.html">
+        <a href="https://catedral-mbl-front-end.vercel.app/pages/home.html">
             <img class="cabecalho_imagem" src="../img/Catedral.webp" alt="Logo da catedral">
         </a>
         <div>
