--- a/pages/loginAdm.html
+++ b/pages/loginAdm.html
@@ -13,7 +13,9 @@
     </script>
 
     <header class="cabecalho">
-        <img class="cabecalho_imagem" src="../img/Catedral.webp" alt="Logo da catedral">
+        <a href="https://catedral-mbl-front-end.vercel.app/pages/home.html">
+            <img class="cabecalho_imagem" src="../img/Catedral.webp" alt="Logo da catedral">
+        </a>
         <h1>Login administradores</h1>
     </header>
     <main class="principal">
