--- a/pages/home.html
+++ b/pages/home.html
@@ -43,7 +43,7 @@
     
                 <div class="principal_minicard">
                     <a href="https://catedral-mbl-sc.onrender.com/api/view/Principios_do_Liberalismo_Classico.pdf">
-                        <h1 class="principal_minicard_titulo">Princípios do liberalismo classico</h1>
+                        <h1 class="principal_minicard_titulo">Princípios do liberalismo clássico</h1>
                         <img class="principal_minicard_img" src="../img/image_1_7.png" alt="">
                     </a>
                     
